--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1,
             shrink-to-fit=no" />
 	<title>Blancard: Курсовая работа</title>
-	<link rel="icon" href="/img/icon/Blanchard.png" type="image/x-icon">
-	<link rel="stylesheet" href="./css/simplebar.css">
-	<link rel="stylesheet" href="./css/choices.min.css">
-	<link rel="stylesheet" href="./css/normalize.css">
-	<link rel="stylesheet" href="./css/effects/swiper/swiper-bundle.min.css">
-	<link rel="stylesheet" href="./css/style.css">
+	<link rel="icon" href="img/icon/Blanchard.png" type="image/x-icon">
+	<link rel="stylesheet" href="css/simplebar.css">
+	<link rel="stylesheet" href="css/choices.min.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/effects/swiper/swiper-bundle.min.css">
+	<link rel="stylesheet" href="css/style.css">
 
-	<link rel="preload" href="/fonts/OpenSans-Bold.woff2" as="font" crossorigin>
-	<link rel="preload" href="/fonts/OpenSans-Regular.woff2" as="font" crossorigin>
-	<link rel="preload" href="/fonts/OpenSans-SemiBold.woff2" as="font" crossorigin>
+	<link rel="preload" href="fonts/OpenSans-Bold.woff2" as="font" crossorigin>
+	<link rel="preload" href="fonts/OpenSans-Regular.woff2" as="font" crossorigin>
+	<link rel="preload" href="fonts/OpenSans-SemiBold.woff2" as="font" crossorigin>
 </head>
 
 <body>
@@ -161,10 +161,10 @@
 					<ul class="header__list">
 						<li class="header__item item-bottom header__elem-bottom">
 							<button class="header__link link-bottom">Реализм
-								<div class="header__button-arrow">
+								<span class="header__button-arrow">
 									<span class="header__button-arrow-1"></span>
 									<span class="header__button-arrow-2"></span>
-								</div>
+								</span>
 							</button>
 							<ul class="header__content" data-simplebar>
 								<li><a href="#" class="header__select select-1">Фридрих</a></li>
@@ -196,10 +196,10 @@
 						</li>
 						<li class="header__item item-bottom header__elem-bottom">
 							<button class="header__link link-bottom">Импрессионизм
-								<div class="header__button-arrow">
+								<span class="header__button-arrow">
 									<span class="header__button-arrow-1"></span>
 									<span class="header__button-arrow-2"></span>
-								</div>
+								</span>
 							</button>
 							<ul class="header__content" data-simplebar>
 								<li><a href="#" class="header__select select-2">Фридрих</a></li>
@@ -230,10 +230,10 @@
 						</li>
 						<li class="header__item item-bottom header__elem-bottom">
 							<button class="header__link link-bottom">Постимпрессионизм
-								<div class="header__button-arrow">
+								<span class="header__button-arrow">
 									<span class="header__button-arrow-1"></span>
 									<span class="header__button-arrow-2"></span>
-								</div>
+								</span>
 							</button>
 							<ul class="header__content" data-simplebar>
 								<li><a href="#" class="header__select select-2">Фридрих</a></li>
@@ -264,10 +264,10 @@
 						</li>
 						<li class="header__item item-bottom header__elem-bottom">
 							<button class="header__link link-bottom">Авангард
-								<div class="header__button-arrow">
+								<span class="header__button-arrow">
 									<span class="header__button-arrow-1"></span>
 									<span class="header__button-arrow-2"></span>
-								</div>
+								</span>
 							</button>
 							<ul class="header__content" data-simplebar>
 								<li><a href="#" class="header__select select-2">Фридрих</a></li>
@@ -298,10 +298,10 @@
 						</li>
 						<li class="header__item item-bottom header__elem-bottom">
 							<button class="header__link link-bottom">Футуризм
-								<div class="header__button-arrow">
+								<span class="header__button-arrow">
 									<span class="header__button-arrow-1"></span>
 									<span class="header__button-arrow-2"></span>
-								</div>
+								</span>
 							</button>
 							<ul class="header__content" data-simplebar>
 								<li><a href="#" class="header__select select-2">Фридрих</a></li>
@@ -593,7 +593,7 @@
 								</div>
 								<div class="history__celebrity">
 									<h2 class="history__name">Доменико Гирландайо</h2>
-									<span class="history__age">2 июня 1448 — 11 января 1494.</span>
+									<div class="history__age">2 июня 1448 — 11 января 1494.</div>
 									<p class="history__descr descr-2">
 										Один из ведущих флорентийских художников Кватроченто,
 										основатель художественной династии, которую продолжили его
@@ -608,12 +608,12 @@
 							</div>
 							<div class="history__disable-content">
 								<div class="history__img-block">
-									<img class="history__left-img lazyload" data-src="./img/icon/artist 1.svg"
+									<img class="history__left-img lazyload" src="#" data-src="./img/icon/artist 1.svg"
 										alt="картинка">
 								</div>
 								<div class="history__celebrity">
 									<h2 class="history__name">Что мы о нём знаем?</h2>
-									<span class="history__age"></span>
+									<div class="history__age"></div>
 									<p class="history__descr descr-2">
 										Пока ничего... Зато мы точно знаем, что в галерее есть на что посмотреть!
 									</p>
@@ -1259,10 +1259,9 @@
 					<h2 class="detailed__title title">Проекты</h2>
 					<div class="detailed__descr">
 						Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности
-						однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А&nbsp;ещё независимые
-						государства смешаны с&nbsp;не&nbsp;уникальными данными до степени совершенной
-						неузнаваемости, из-за чего возрастает их&nbsp;статус бесполезности. Прежде всего, постоянное
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А ещё независимые
+						государства смешаны с не уникальными данными до степени совершенной
+						неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде всего, постоянное
 						информационно-пропагандистское
 
 						<span class="detailed__tooltip">
@@ -1304,7 +1303,7 @@
 							</span>
 						</span>
 						обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности
-						принимаемых решений. И&nbsp;нет сомнений, что действия представителей оппозиции могут быть
+						принимаемых решений. И нет сомнений, что действия представителей оппозиции могут быть
 						рассмотрены
 						<span class="detailed__tooltip">
 							<button class="detailed__icon">
@@ -1362,7 +1361,7 @@
 								выводы вызывают у&nbsp;вас эмоции
 							</span>
 						</span>
-						исключительно в&nbsp;разрезе маркетинговых и&nbsp;финансовых
+						исключительно в разрезе маркетинговых и финансовых
 						<span class="detailed__tooltip">
 							<button class="detailed__icon">
 								<svg width="16" height="16" viewBox="0 0
@@ -1430,9 +1429,9 @@
 							</button>
 							<span class="popup popup-3">В&nbsp;стремлении повысить качество</span>
 						</span>
-						предпосылок. Банальные, но&nbsp;неопровержимые выводы, а&nbsp;также представители современных
-						социальных резервов призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны
-						быть смешаны с&nbsp;не&nbsp;уникальными данными до&nbsp;степени совершенной неузнаваемости.
+						предпосылок. Банальные, но неопровержимые выводы, а также представители современных
+						социальных резервов призывают нас к новым свершениям, которые, в свою очередь, должны
+						быть смешаны с не уникальными данными до степени совершенной неузнаваемости.
 						Подробнее:
 						<a href="/blanchard-art.ru/projects/about">blanchard-art.ru/projects/about</a>
 					</div>
@@ -1608,16 +1607,16 @@
 	</footer>
 	<script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU"></script>
 
-	<script src="./js/jquery-3.5.1.min.js"></script>
-	<script src="./js/jquery-ui.min.js"></script>
-	<script src="../js/swiper/swiper-bundle.min.js"></script>
-	<script src="./js/simplebar.min.js" defer></script>
-	<script src="./js/choices.min.js" defer></script>
-	<script src="./js/just-validate.min.js" defer></script>
-	<script src="./js/inputmask.js" defer></script>
-	<script src="./js/lazyload.min.js"></script>
+	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
+	<script src="js/swiper/swiper-bundle.min.js"></script>
+	<script src="js/simplebar.min.js" defer></script>
+	<script src="js/choices.min.js" defer></script>
+	<script src="js/just-validate.min.js" defer></script>
+	<script src="js/inputmask.js" defer></script>
+	<script src="js/lazyload.min.js"></script>
 
-	<script src="./js/script.min.js" defer></script>
+	<script src="js/script.min.js" defer></script>
 
 	<script>
 		lazyload();
