--- a/index.html
+++ b/index.html
@@ -1271,8 +1271,8 @@
 						Предварительные выводы: постоянное информационно-пропагандистское обеспечение нашей деятельности
 						однозначно фиксирует необходимость своевременного выполнения сверхзадачи. А&nbsp;ещё независимые
 						государства смешаны с не уникальными данными до степени совершенной
-						неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде всего, постоянное
-						информационно пропагандистское
+						неузнаваемости, из-за чего возрастает их статус бесполезности. Прежде всего,
+						постоянное информационно-пропагандистское
 
 						<span class="detailed__tooltip">
 							<button class="detailed__icon">
@@ -1371,7 +1371,7 @@
 								выводы вызывают у&nbsp;вас эмоции
 							</span>
 						</span>
-						исключительно в&nbsp;разрезе маркетинговых и финансовых&nbsp;
+						исключительно в&nbsp;разрезе маркетинговых и финансовых
 						<span class="detailed__tooltip">
 							<button class="detailed__icon">
 								<svg width="16" height="16" viewBox="0 0
@@ -1562,7 +1562,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="contacts__map" id="map" ></div>
+				<div class="contacts__map" id="map"></div>
 
 			</div>
 
