--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@
 						постоянное информационно-пропагандистское
 
 						<span class="detailed__tooltip">
-							<button class="detailed__icon">
+							<button class="detailed__icon " >
 								<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
 									<path d="M15.5 8C15.5 12.1421
                                                         12.1421 15.5 8
@@ -1285,7 +1285,7 @@
 						принимаемых решений. И&nbsp;нет сомнений, что действия представителей оппозиции могут быть
 						рассмотрены
 						<span class="detailed__tooltip">
-							<button class="detailed__icon">
+							<button class="detailed__icon " >
 								<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
 									<path d="M15.5 8C15.5
                                                                 12.1421 12.1421
@@ -1342,7 +1342,7 @@
 						</span>
 						исключительно в&nbsp;разрезе маркетинговых и финансовых
 						<span class="detailed__tooltip">
-							<button class="detailed__icon">
+							<button class="detailed__icon " >
 								<svg width="16" height="16" viewBox="0 0
                                                                     16 16" xmlns="http://www.w3.org/2000/svg">
 									<path d="M15.5
@@ -1556,7 +1556,7 @@
 						alt="Логотип" /></a>
 				<ul class="footer__social-block">
 					<li class="footer__elem">
-						<a class="footer__vk footer__social" href="https://vk.com/">
+						<a class="footer__vk footer__social"  href="https://vk.com/">
 							<svg width="45" height="45" viewBox="0 0 45 45" fill="none"
 								xmlns="http://www.w3.org/2000/svg">
 								<path
@@ -1596,19 +1596,19 @@
 	</footer>
 	<script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU"></script>
 
-	<script src="/js/lib/jquery-3.5.1.min.js"></script>
-	<script src="/js/lib/jquery-ui.min.js"></script>
-	<script src="/js/lib/swiper-bundle.min.js"></script>
-	<script src="/js/lib/simplebar.min.js"></script>
-	<script src="/js/lib/choices.min.js"></script>
-	<script src="/js/lib/just-validate.min.js"></script>
-	<script src="/js/lib/lazyload.min.js"></script>
-	<script src="/js/lib/inputmask.js"></script>
-	<script type="module" src="js/script.js"></script>
-	<script src="/js/lightgallery.umd.js"></script>
-	<script src="/js/gallery/lg-thumbnail.umd.js"></script>
-	<script src="/js/gallery/lg-zoom.umd.js"></script>
-	<script src="/js/gallery/lg-fullscreen.umd.js"></script>
+	<script src="./js/lib/jquery-3.5.1.min.js"></script>
+	<script src="./js/lib/jquery-ui.min.js"></script>
+	<script src="./js/lib/swiper-bundle.min.js"></script>
+	<script src="./js/lib/simplebar.min.js"></script>
+	<script src="./js/lib/choices.min.js"></script>
+	<script src="./js/lib/just-validate.min.js"></script>
+	<script src="./js/lib/lazyload.min.js"></script>
+	<script src="./js/lib/inputmask.js"></script>
+	<script src="./js/script.js" type="module"></script>
+	<script src="./js/lightgallery.umd.js"></script>
+	<script src="./js/gallery/lg-thumbnail.umd.js"></script>
+	<script src="./js/gallery/lg-zoom.umd.js"></script>
+	<script src="./js/gallery/lg-fullscreen.umd.js"></script>
 	<script>
 		lazyload();
 		lightGallery(document.querySelector('.lightgallery'), {
