--- a/index.html
+++ b/index.html
@@ -1101,8 +1101,10 @@
 						<div class="swiper-wrapper editions__size">
 							<div class="swiper-slide content-2">
 								<div class="editions__book-1 editions__book">
-									<img class="lazyload" src="#" data-src="./img/editions/Rectangle111.webp"
-										alt="Картинка" />
+									<div class="editions__img-block">
+										<img class="lazyload" src="#" data-src="./img/editions/Rectangle111.webp"
+											alt="Картинка" />
+									</div>
 									<div class="editions__info">
 										<div class="editions__descr">
 											<span class="editions__title-book">Искусство цвета</span>
@@ -1117,8 +1119,10 @@
 							</div>
 							<div class="swiper-slide content-2">
 								<div class="editions__book-2 editions__book">
-									<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-1.webp"
-										alt="Картинка" />
+									<div class="editions__img-block">
+										<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-1.webp"
+											alt="Картинка" />
+									</div>
 									<div class="editions__info">
 										<div class="editions__descr">
 											<span class="editions__title-book">Типографика
@@ -1134,8 +1138,10 @@
 							</div>
 							<div class="swiper-slide content-2">
 								<div class="editions__book-3 editions__book">
-									<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-2.webp"
-										alt="Картинка" />
+									<div class="editions__img-block">
+										<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-2.webp"
+											alt="Картинка" />
+									</div>
 									<div class="editions__info">
 										<div class="editions__descr">
 											<span class="editions__title-book">Книга про буквы
@@ -1153,8 +1159,10 @@
 							</div>
 							<div class="swiper-slide content-2">
 								<div class="editions__book-4 editions__book">
-									<img class="lazyload" src="#" data-src="./img/editions/Rectangle112.webp"
-										alt="Картинка" />
+									<div class="editions__img-block">
+										<img class="lazyload" src="#" data-src="./img/editions/Rectangle112.webp"
+											alt="Картинка" />
+									</div>
 									<div class="editions__info">
 										<div class="editions__descr">
 											<span class="editions__title-book">Книга про буквы
@@ -1172,8 +1180,10 @@
 							</div>
 							<div class="swiper-slide content-2">
 								<div class="editions__book-5 editions__book">
-									<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-4.webp"
-										alt="Картинка" />
+									<div class="editions__img-block">
+										<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-4.webp"
+											alt="Картинка" />
+									</div>
 									<div class="editions__info">
 										<div class="editions__descr">
 											<span class="editions__title-book">Книга про буквы
@@ -1191,8 +1201,10 @@
 							</div>
 							<div class="swiper-slide content-2">
 								<div class="editions__book-6 editions__book">
-									<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-5.webp"
-										alt="Картинка" />
+									<div class="editions__img-block">
+										<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-5.webp"
+											alt="Картинка" />
+									</div>
 									<div class="editions__info">
 										<div class="editions__descr">
 											<span class="editions__title-book">Книга про буквы
@@ -1210,8 +1222,10 @@
 							</div>
 							<div class="swiper-slide content-2">
 								<div class="editions__book-7 editions__book">
-									<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-3.webp"
-										alt="Картинка" />
+									<div class="editions__img-block">
+										<img class="lazyload" src="#" data-src="./img/editions/Rectangle111-3.webp"
+											alt="Картинка" />
+									</div>
 									<div class="editions__info">
 										<div class="editions__descr">
 											<span class="editions__title-book">Книга про буквы
@@ -1244,7 +1258,7 @@
 						постоянное информационно-пропагандистское
 
 						<span class="detailed__tooltip">
-							<button class="detailed__icon " >
+							<button class="detailed__icon ">
 								<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
 									<path d="M15.5 8C15.5 12.1421
                                                         12.1421 15.5 8
@@ -1285,7 +1299,7 @@
 						принимаемых решений. И&nbsp;нет сомнений, что действия представителей оппозиции могут быть
 						рассмотрены
 						<span class="detailed__tooltip">
-							<button class="detailed__icon " >
+							<button class="detailed__icon ">
 								<svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
 									<path d="M15.5 8C15.5
                                                                 12.1421 12.1421
@@ -1342,7 +1356,7 @@
 						</span>
 						исключительно в&nbsp;разрезе маркетинговых и финансовых
 						<span class="detailed__tooltip">
-							<button class="detailed__icon " >
+							<button class="detailed__icon ">
 								<svg width="16" height="16" viewBox="0 0
                                                                     16 16" xmlns="http://www.w3.org/2000/svg">
 									<path d="M15.5
@@ -1556,7 +1570,7 @@
 						alt="Логотип" /></a>
 				<ul class="footer__social-block">
 					<li class="footer__elem">
-						<a class="footer__vk footer__social"  href="https://vk.com/">
+						<a class="footer__vk footer__social" href="https://vk.com/">
 							<svg width="45" height="45" viewBox="0 0 45 45" fill="none"
 								xmlns="http://www.w3.org/2000/svg">
 								<path
