--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					</button>
 					<a href="#" class="header__logo logo link"><img src="./img/logo.png" alt="Логотип" /></a>
 					<nav class="header__menu">
+						<div class="header__nav-bg"></div>
 						<ul class="header__list">
 							<li class="header__item item-top">
 								<a href="#about" class="header__link link">О нас</a>
