--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</button>
 					<a href="#" class="header__logo logo link"><img src="./img/logo.png" alt="Логотип" /></a>
 					<nav class="header__menu">
-						<div class="header__nav-bg"></div>
+						<div class="header__close-nav"></div>
 						<ul class="header__list">
 							<li class="header__item item-top">
 								<a href="#about" class="header__link link">О нас</a>
@@ -1292,9 +1292,10 @@
                                                             4.90259 8 4.90259Z" fill="black" />
 								</svg>
 							</button>
-							<span class="popup popup-1">Пример современных тенденций&nbsp;&mdash; современная
+							<div class="popup popup-1">Пример современных тенденций&nbsp;&mdash; современная
 								методология разработки
-							</span>
+								<div class="popup-arrow" data-popper-arrow></div>
+							</div>
 						</span>
 						обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности
 						принимаемых решений. И&nbsp;нет сомнений, что действия представителей оппозиции могут быть
@@ -1350,10 +1351,11 @@
                                                                     4.90259Z" fill="black" />
 								</svg>
 							</button>
-							<span class="popup popup-2">Приятно, граждане, наблюдать, как сделанные на&nbsp;базе
+							<div class="popup popup-2">Приятно, граждане, наблюдать, как сделанные на&nbsp;базе
 								аналитики
 								выводы вызывают у&nbsp;вас эмоции
-							</span>
+								<div class="popup-arrow" data-popper-arrow></div>
+							</div>
 						</span>
 						исключительно в&nbsp;разрезе маркетинговых и финансовых
 						<span class="detailed__tooltip">
@@ -1421,7 +1423,9 @@
                                                                             4.90259Z" fill="black" />
 								</svg>
 							</button>
-							<span class="popup popup-3">В&nbsp;стремлении повысить качество</span>
+							<div class="popup popup-3">В&nbsp;стремлении повысить качество
+								<div class="popup-arrow" data-popper-arrow></div>
+							</div>
 						</span>
 						предпосылок. Банальные, но неопровержимые выводы, а&nbsp;также представители современных
 						социальных резервов призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны
@@ -1520,48 +1524,38 @@
 				<h2 class="contacts__title title">Контакты</h2>
 			</div>
 			<div class="contacts__unity">
-				<div class="fix-container">
-					<div class="contacts__unity-content">
-						<div class="contacts__left">
-							<h3 class="contacts__office">Шоурум №4</h3>
-							<p class="contacts__street">Леонтьевский переулок, дом 5/1</p>
-							<form class="contacts__form form" action="#">
-								<h4 class="form__title">Заказать обратный звонок</h4>
-								<div class="form__input-block">
-									<input class="form__name" type="text" placeholder="Имя*" data-validate-field="name"
-										name="name" />
-								</div>
-								<div class="form__input-block">
-									<input class="form__tel" type="tel" placeholder="Телефон*" data-validate-field="tel"
-										name="tel" />
-								</div>
-								<button class="form__button button" type="submit">Заказать</button>
-							</form>
-							<div class="mess"></div>
-							<span class="contacts__communication">Связаться в один клик</span>
-							<ul class="contacts__social">
-								<li class="contacts__elem">
-									<a href="https://telegram.org/" class="contacts__img-1 contacts__img">
-									</a>
-								</li>
-								<li class="contacts__elem">
-									<a href="https://web.whatsapp.com/" class="contacts__img-2 contacts__img">
-									</a>
-								</li>
-							</ul>
+				<div class="contacts__left">
+					<h3 class="contacts__office">Шоурум №4</h3>
+					<p class="contacts__street">Леонтьевский переулок, дом 5/1</p>
+					<form class="contacts__form form" action="#">
+						<h4 class="form__title">Заказать обратный звонок</h4>
+						<div class="form__input-block">
+							<input class="form__name" type="text" placeholder="Имя*" data-validate-field="name"
+								name="name" />
 						</div>
-						<div class="contacts__info">
-							<div class="contacts__map" id="map"></div>
+						<div class="form__input-block">
+							<input class="form__tel" type="tel" placeholder="Телефон*" data-validate-field="tel"
+								name="tel" />
 						</div>
-					</div>
+						<button class="form__button button" type="submit">Заказать</button>
+					</form>
+					<div class="mess"></div>
+					<div class="contacts__communication">Связаться в один клик</div>
+					<ul class="contacts__social">
+						<li class="contacts__elem">
+							<a href="https://telegram.org/" class="contacts__img-1 contacts__img">
+							</a>
+						</li>
+						<li class="contacts__elem">
+							<a href="https://web.whatsapp.com/" class="contacts__img-2 contacts__img">
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="contacts__map-conatainer">
+					<div class="contacts__map" id="map"></div>
 				</div>
 			</div>
-
-
-
-
-
-
 		</section>
 	</main>
 	<footer class="footer">
@@ -1610,7 +1604,7 @@
 		</div>
 	</footer>
 	<script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU"></script>
-
+	<script src="https://unpkg.com/@popperjs/core@2"></script>
 	<script src="./js/lib/jquery-3.5.1.min.js"></script>
 	<script src="./js/lib/jquery-ui.min.js"></script>
 	<script src="./js/lib/swiper-bundle.min.js"></script>
@@ -1618,18 +1612,14 @@
 	<script src="./js/lib/choices.min.js"></script>
 	<script src="./js/lib/just-validate.min.js"></script>
 	<script src="./js/lib/lazyload.min.js"></script>
-	<script src="./js/lib/inputmask.js"></script>
-	<script src="./js/script.js" type="module"></script>
-	<script src="./js/lightgallery.umd.js"></script>
+	<script src="./js/lib/inputmask.js"></script>	
+	<script src="./js/gallery/lightgallery.umd.js"></script>	
 	<script src="./js/gallery/lg-thumbnail.umd.js"></script>
 	<script src="./js/gallery/lg-zoom.umd.js"></script>
 	<script src="./js/gallery/lg-fullscreen.umd.js"></script>
-	<script>
-		lazyload();
-		lightGallery(document.querySelector('.lightgallery'), {
-			plugins: [lgZoom, lgThumbnail, lgFullscreen],
-			speed: 500,
-		});
+	<script src="./js/script.js" type="module"></script>
+	<script>lazyload();
+		
 	</script>
 </body>
 
