--- a/index.html
+++ b/index.html
@@ -1292,10 +1292,10 @@
                                                             4.90259 8 4.90259Z" fill="black" />
 								</svg>
 							</button>
-							<div class="popup popup-1">Пример современных тенденций&nbsp;&mdash; современная
+							<span class="popup popup-1">Пример современных тенденций&nbsp;&mdash; современная
 								методология разработки
-								<div class="popup-arrow" data-popper-arrow></div>
-							</div>
+								<span class="popup-arrow" data-popper-arrow></span>
+							</span>
 						</span>
 						обеспечение нашей деятельности однозначно фиксирует необходимость экономической целесообразности
 						принимаемых решений. И&nbsp;нет сомнений, что действия представителей оппозиции могут быть
@@ -1351,11 +1351,11 @@
                                                                     4.90259Z" fill="black" />
 								</svg>
 							</button>
-							<div class="popup popup-2">Приятно, граждане, наблюдать, как сделанные на&nbsp;базе
+							<span class="popup popup-2">Приятно, граждане, наблюдать, как сделанные на&nbsp;базе
 								аналитики
 								выводы вызывают у&nbsp;вас эмоции
-								<div class="popup-arrow" data-popper-arrow></div>
-							</div>
+								<span class="popup-arrow" data-popper-arrow></span>
+							</span>
 						</span>
 						исключительно в&nbsp;разрезе маркетинговых и финансовых
 						<span class="detailed__tooltip">
@@ -1423,9 +1423,9 @@
                                                                             4.90259Z" fill="black" />
 								</svg>
 							</button>
-							<div class="popup popup-3">В&nbsp;стремлении повысить качество
-								<div class="popup-arrow" data-popper-arrow></div>
-							</div>
+							<span class="popup popup-3">В&nbsp;стремлении повысить качество
+								<span class="popup-arrow" data-popper-arrow></span>
+							</span>
 						</span>
 						предпосылок. Банальные, но неопровержимые выводы, а&nbsp;также представители современных
 						социальных резервов призывают нас к&nbsp;новым свершениям, которые, в&nbsp;свою очередь, должны
@@ -1612,14 +1612,14 @@
 	<script src="./js/lib/choices.min.js"></script>
 	<script src="./js/lib/just-validate.min.js"></script>
 	<script src="./js/lib/lazyload.min.js"></script>
-	<script src="./js/lib/inputmask.js"></script>	
-	<script src="./js/gallery/lightgallery.umd.js"></script>	
+	<script src="./js/lib/inputmask.js"></script>
+	<script src="./js/gallery/lightgallery.umd.js"></script>
 	<script src="./js/gallery/lg-thumbnail.umd.js"></script>
 	<script src="./js/gallery/lg-zoom.umd.js"></script>
 	<script src="./js/gallery/lg-fullscreen.umd.js"></script>
 	<script src="./js/script.js" type="module"></script>
 	<script>lazyload();
-		
+
 	</script>
 </body>
 
